# up_scholarship

./: .gitignore  README.md  pyproject.toml  setup.py
up_scholarship/: __init__.py  main.py  scrapy.cfg
up_scholarship/data/codes/: bank.json  bank.py  board.json  branch.json  branch.py  caste.json  course.json  district.json  institute.json  religion.json  subcaste.json
up_scholarship/providers/: codes.py  constants.py  file_name.py  student_file.py  url.py  utilities.py
up_scholarship/spiders/: aadhaar_auth.py  base.py  filldata.py  finalsubmit.py  forward.py  receive.py  register.py  renew.py  save_captchas.py  submitcheck.py  uploadphoto.py  verify.py
up_scholarship/tools/: convert2pdf.py  crop.py  imagersz.py  namestr.py  photo_scan_helper.py  printfinal.py  scan_photo.py  solve_captcha_using_model.py  straightening.py  straightening2.py  student_done_helper.py
up_scholarship/tools/captcha_models/captcha_model/: saved_model.pb
up_scholarship/tools/captcha_models/captcha_model/variables/: variables.index
